# model_research

./: .gitignore  Makefile  Pipfile  README.md  objective.md  pyproject.toml
.dvc/: config
data/raw/: .gitignore  field1.parquet  field4.parquet  field5.parquet
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-explore.ipynb
notebooks/setup/: class_setup.ipynb  lab_utils_cls.ipynb
notebooks/setup/ml/: rfr_regression_base.ipynb
