[tool.poetry]
name = "model-research"
version = "0.1.0"
description = ""
authors = ["emakeiv <eivanas.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.11.4,<3.13"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
click = "^8.1.7"
dvc = {extras = ["s3"], version = "^3.28.0"}
mlflow = "^2.8.0"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
numpy = "^1.26.1"
torch = {version = "^2.1.0+cpu", source = "pytorch"}
ipykernel = "^6.26.0"
statsmodels = "^0.14.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pylint = "^3.0.2"
pytest = "^7.4.3"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
